--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -9,7 +9,7 @@
 <SetHeader @ref=Header>
 
     
-            <MudStack Row>
+            <MudStack Row=true>
                     <div >
                         Templates
 
