--- a/BLAZAM/Shared/Navs/NavMenu.razor
+++ b/BLAZAM/Shared/Navs/NavMenu.razor
@@ -20,7 +20,7 @@
 
 <MudPaper Width="180px" Elevation="0" Class="py-3 mud-theme-dark">
     <MudNavMenu Color="Color.Success" Bordered="true">
-        <MudStack Row>
+        <MudStack Row=true>
             <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
             <MudText Align="Align.Center" Class="align-middle"> @DatabaseCache.ApplicationSettings?.AppAbbreviation</MudText>
 
