--- a/BLAZAM/Shared/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAM/Shared/UI/Inputs/ADAutoComplete.razor
@@ -1,14 +1,15 @@
 ﻿@inherits AutoCompleteComponentBase
 <MudAutocomplete Class="@Class"
+                 Disabled=@Disabled
                  T="IDirectoryEntryAdapter"
                  Label="@Label"
                  @bind-Value="SelectedResult"
                  @bind-Text=@SearchTerm
                  SearchFuncWithCancel="@GetResults"
-                  DebounceInterval=500
+                 DebounceInterval=500
                  ResetValueOnEmptyText="true"
                  CoerceText="@AllowCustomInput" CoerceValue="false"
-                 Clearable
+                      Clearable
                  ToStringFunc="item=>item?.CanonicalName"
                  AdornmentColor="Color.Secondary"
                  ProgressIndicatorColor="Color.Secondary"
@@ -56,19 +57,19 @@
         {
             <MudText>
 
-            Start typing to search...
+                Start typing to search...
             </MudText>
 
         }
         else
         {
             <MudText>
-            Sorry no result were found 😒
+                Sorry no result were found 😒
             </MudText>
 
         }
 
-        </NoItemsTemplate>
+    </NoItemsTemplate>
 </MudAutocomplete>
 
 
@@ -84,8 +85,9 @@
     public string? Class { get; set; }
     [Parameter]
     public bool Multiple { get; set; }
+    [Parameter]
+    public bool Disabled { get; set; }
 
-    
     [Parameter]
     public bool AllowCustomInput { get; set; }
 
@@ -110,7 +112,7 @@
             if (_searchDisabled == value)
                 return;
             _searchDisabled = value;
-           // SearchDisabledChanged.InvokeAsync(value);
+            // SearchDisabledChanged.InvokeAsync(value);
         }
     }
 
@@ -167,7 +169,7 @@
 
     public List<IDirectoryEntryAdapter> _selectedResults;
 
-   
+
     List<string> SelectedResultNames = new();
 
 
