--- a/BLAZAM/Shared/UI/SearchPageHeader.razor
+++ b/BLAZAM/Shared/UI/SearchPageHeader.razor
@@ -1,67 +1,87 @@
 @inherits AppComponentBase
+@attribute [Authorize]
+
 <MudForm Style="width:100%" Class="mx-2" @onsubmit="(()=>{SearchService.Search();})">
 
+    <AuthorizeView Context="authContext">
 
+        <MudStack Row="true">
 
-    <MudStack Row="true">
-        <MudMenu Color=Color.Secondary StartIcon="@Icons.Material.Filled.TypeSpecimen" Label="@SearchService.SeachObjectType.ToString()">
-            @foreach (var objectType in ObjectTypes)
+            <MudMenu Color=Color.Secondary StartIcon="@Icons.Material.Filled.TypeSpecimen" Label="@SearchService.SeachObjectType.ToString()">
+                <CascadingAuthenticationState>
+
+                    <MudMenuItem OnClick=@(()=>{ SearchService.SeachObjectType=ActiveDirectoryObjectType.All; })>@AppLocalization["All"]</MudMenuItem>
+                    <AuthorizeView Roles="@(UserRoles.SearchUsers+","+UserRoles.SuperAdmin)">
+                        
+                        <MudMenuItem OnClick=@(()=>{ SearchService.SeachObjectType=ActiveDirectoryObjectType.User; })>@AppLocalization["User"]</MudMenuItem>
+                    </AuthorizeView>
+
+                    <AuthorizeView Roles="@(UserRoles.SearchGroups+","+UserRoles.SuperAdmin)">
+                        <MudMenuItem OnClick=@(()=>{ SearchService.SeachObjectType=ActiveDirectoryObjectType.Group; })>@AppLocalization["Group"]</MudMenuItem>
+
+                    </AuthorizeView>
+                    <AuthorizeView Roles="@(UserRoles.SearchOUs+","+UserRoles.SuperAdmin)">
+                        <MudMenuItem OnClick=@(()=>{ SearchService.SeachObjectType=ActiveDirectoryObjectType.OU; })>@AppLocalization["OU"]</MudMenuItem>
+
+                    </AuthorizeView>
+                    <AuthorizeView Roles="@(UserRoles.SearchComputers+","+UserRoles.SuperAdmin)">
+                        <MudMenuItem OnClick=@(()=>{ SearchService.SeachObjectType=ActiveDirectoryObjectType.Computer; })>@AppLocalization["Computer"]</MudMenuItem>
+
+                    </AuthorizeView>
+                </CascadingAuthenticationState>
+
+            </MudMenu>
+            <MudPaper Class=" mud-overlay-light" Style="width:100%;height:min-content;">
+                <ADAutoComplete Class="mt-0"
+                                Variant="Variant.Filled"
+                                Label="Search Directory"
+                                SearchObjectType="@SearchService.SeachObjectType"
+                                SearchDisabled=@SearchService.IncludeDisabled
+                                @bind-SearchTerm="@SearchService.SearchTerm" />
+            </MudPaper>
+            @if (UserStateService?.CurrentUserState?.IsSuperAdmin == true || UserStateService?.CurrentUserState?.DirectoryUser?.CanSearchDisabled == true)
             {
-                <MudMenuItem OnClick=@(()=>{ SearchService.SeachObjectType=objectType; })>@objectType</MudMenuItem>
-            }
-        </MudMenu>
-        <MudPaper Class=" mud-overlay-light" Style="width:100%;height:min-content;">
-        <ADAutoComplete Class="mt-0"
-         
-                        Variant="Variant.Filled"
-                        Label="Search Directory"
-                        SearchObjectType="@SearchService.SeachObjectType"
-                        SearchDisabled=@SearchService.IncludeDisabled
-                        @bind-SearchTerm="@SearchService.SearchTerm" />
-        </MudPaper>
-        @if (UserStateService?.CurrentUserState?.IsSuperAdmin == true || UserStateService?.CurrentUserState?.DirectoryUser?.CanSearchDisabled == true)
-        {
-            var buttonColor = Color.Error;
-            if (!SearchService.IncludeDisabled)
+                var buttonColor = Color.Error;
+                if (!SearchService.IncludeDisabled)
 
+                {
+                    buttonColor = Color.Success;
+                }
+                <MudButton Class="d-flex" ButtonType="ButtonType.Button" OnClick=@(async()=>{
+                       SearchService.IncludeDisabled= !SearchService.IncludeDisabled;
+                       await InvokeAsync(StateHasChanged);
+                       }) Color=buttonColor>
+                    Enabled Only
+                </MudButton>
+
+
+
+
+
+            }
+
+            @if (Searcher?.SearchState == SearchState.Collecting)
             {
-                buttonColor = Color.Success;
+                <MudFab Style="min-width: 56px !important;" Class="d-flex" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Cancel" OnClick=@(()=>{
+                    disableCancel = true;
+                    Searcher.Cancel();
+                    }) />
+
+
+
             }
-            <MudButton Class="d-flex" ButtonType="ButtonType.Button" OnClick=@(async()=>{
-                   SearchService.IncludeDisabled= !SearchService.IncludeDisabled;
-                   await InvokeAsync(StateHasChanged);
-                   }) Color=buttonColor>
-                Enabled Only
-            </MudButton>
+            else
+            {
+                <MudFab Style="min-width: 56px !important;" Class="d-flex" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Search" OnClick=@(()=>{SearchService.Search();}) />
+
+
+            }
 
 
 
+        </MudStack>
 
-
-        }
-
-        @if (Searcher?.SearchState == SearchState.Collecting)
-        {
-            <MudFab Style="min-width: 56px !important;" Class="d-flex" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Cancel" OnClick=@(()=>{
-                disableCancel = true;
-                Searcher.Cancel();
-                }) />
-
-
-
-        }
-        else
-        {
-            <MudFab Style="min-width: 56px !important;" Class="d-flex" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Search" OnClick=@(()=>{SearchService.Search();}) />
-
-
-        }
-
-
-
-    </MudStack>
-
-
+    </AuthorizeView>
 </MudForm>
 
 @code {
