--- a/BLAZAM/Shared/UI/Settings/EmailSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/EmailSettings.razor
@@ -12,29 +12,29 @@
 
 
     <SettingsField Label="@SettingsLocalization["Admin bcc"]">
-        <MudTextField HelperText="Addresses to blind copy all application emails that are sent." @bind-Value="settings.AdminBcc" />
+        <MudTextField Label="@SettingsLocalization["Admin bcc"]" HelperText="Addresses to blind copy all application emails that are sent." @bind-Value="settings.AdminBcc" />
     </SettingsField>
 
     <SettingsField Label="@SettingsLocalization["SMTP Server"]">
-        <MudTextField @bind-Value="settings.SMTPServer" />
+        <MudTextField Label="@SettingsLocalization["SMTP Server"]" @bind-Value="settings.SMTPServer" />
     </SettingsField>
 
     <SettingsField Label="@SettingsLocalization["SMTP Port"]">
 
 
-        <MudNumericField T="int" HideSpinButtons="true" @bind-Value="settings.SMTPPort" />
+        <MudNumericField Label="@SettingsLocalization["SMTP Port"]" T="int" HideSpinButtons="true" @bind-Value="settings.SMTPPort" />
 
     </SettingsField>
 
     <SettingsField Label="@SettingsLocalization["Use TLS"]">
 
-        <MudSwitch @bind-Checked="settings.UseTLS" />
+        <MudSwitch Label="@SettingsLocalization["Enabled"]" @bind-Checked="settings.UseTLS" />
 
     </SettingsField>
 
     <SettingsField Label="@SettingsLocalization["Use SMTP Authentication"]">
 
-        <MudSwitch @bind-Checked="settings.UseSMTPAuth" />
+        <MudSwitch Label="@SettingsLocalization["Enabled"]" @bind-Checked="settings.UseSMTPAuth" />
 
     </SettingsField>
 
@@ -42,43 +42,43 @@
     {
         <SettingsField Label="@SettingsLocalization["SMTP Username"]">
 
-            <MudTextField @bind-Value="settings.SMTPUsername" />
+            <MudTextField Label="@SettingsLocalization["SMTP Username"]" @bind-Value="settings.SMTPUsername" />
         </SettingsField>
 
         <SettingsField Label="@SettingsLocalization["SMTP Password"]">
 
 
-            <MudTextField @bind-Value="settings.SMTPPassword" />
+            <MudTextField Label="@SettingsLocalization["SMTP Password"]" @bind-Value="settings.SMTPPassword" />
 
         </SettingsField>
     }
     <SettingsField Label="@SettingsLocalization["From Address"]">
 
 
-        <MudTextField @bind-Value="settings.FromAddress" />
+        <MudTextField Label="@SettingsLocalization["From Address"]" @bind-Value="settings.FromAddress" />
     </SettingsField>
     <SettingsField Label="@SettingsLocalization["From Display Name"]">
 
 
-        <MudTextField @bind-Value="settings.FromName" />
+        <MudTextField Label="@SettingsLocalization["From Display Name"]" @bind-Value="settings.FromName" />
 
     </SettingsField>
 
     <SettingsField Label="@SettingsLocalization["Reply-To Address"]">
 
 
-        <MudTextField @bind-Value="settings.ReplyToAddress" />
+        <MudTextField Label="@SettingsLocalization["Reply-To Address"]" @bind-Value="settings.ReplyToAddress" />
 
     </SettingsField>
 
     <SettingsField Label="@SettingsLocalization["Reply-To Display Name"]">
 
 
-        <MudTextField @bind-Value="settings.ReplyToName" />
+        <MudTextField Label="@SettingsLocalization["Reply-To Display Name"]" @bind-Value="settings.ReplyToName" />
 
     </SettingsField>
 
-    <MudTextField Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
+    <MudTextField Label="@SettingsLocalization["Test Recipient"]" Disabled=@(!settings.Enabled) @bind-Value=testRecipient />
 
     <MudButton Disabled=@(!settings.Enabled && !settings.Valid()) @onclick="SendTestEmail" Color="Color.Success">Send Test Email</MudButton>
 
