--- a/BLAZAM/Shared/UI/Settings/SettingsField.razor
+++ b/BLAZAM/Shared/UI/Settings/SettingsField.razor
@@ -4,7 +4,7 @@
             @if(FieldLabel==null && !Label.IsNullOrEmpty())
             {
 
-                <MudText Color=Color.Primary Style="margin-bottom:4px;">
+                <MudText Color=Color.Default Style="margin-bottom:4px;">
                     @Label
                 </MudText>
             }
